refactor(java doc ):sonar